# ensemble-nn-stock-forecast

./: .gitignore  Makefile  README.md  combine_files.py  convolutional_nn.py  data_cleaning_and_exploration.ipynb  data_sourcing.ipynb  data_utils.py  df_creation.ipynb  first_stage_data_cleaning.ipynb  latex.tex  lstm_nn.py  model.ipynb  pyproject.toml  requirements.txt  results_vizualization.ipynb  second_stage_df_preparing.ipynb  stooq_exporter.ipynb
data/: quarterly_data.csv
data/dataframes/: names_gpw.csv
data_cleaning/: data_sourcing.ipynb  data_utils.py  excel_data_prep.ipynb  first_stage_data_cleaning.ipynb  second_stage_df_preparing.ipynb  stooq_data_prep.ipynb
dataframes/: company_market_value.csv  data_with_target.csv
model_reports/: model_evaluation.py
models/: cnn.py  lstm.py  model_utils.py
models/lstm/: data_processing.py  execute.py  hyperparameter_search.py  lstm.py  model.py  training.py
models/metrics/: metrics.py
models/simplified_versions/: simple_cnn.py  simple_lstm.py
notebooks/: model_notebook.ipynb
notebooks/data_cleaning/: excel_data_prep.ipynb
notebooks/data_extraction/: data_extraction.ipynb  detailed_data_extract.ipynb  detailed_data_extraction.ipynb  general_data_extract.ipynb  general_data_extraction.ipynb  market_value_extract.ipynb
notebooks/data_extraction/utils/: data_utils.py
notebooks/data_manipulation/: feature_engineering.ipynb  missing_data.ipynb  model_df.ipynb  normalization_and_merging.ipynb
notebooks/data_manipulation/utils/: calculate_metrics.py
notebooks/visualization/: results_vizualization.ipynb
scripts/: data_utils.py
src/data_exploration/: analyze_data_availability.py
src/data_extraction/: detailed_data_extract.py  general_data_extract.py  market_value_extract.py
src/data_processing/: feature_engineering.py  missing_data_processing.py  model_data_preparation.py  normalization_and_merging.py
src/datasets/: apply_feature_selection.py  datasets_for_model.py
src/model/baseline/: arima_baseline.py  baseline_utils.py  last_value_baseline.py  run_baselines.py
src/model/ensemble/: ENSEMBLE_PERFORMANCE_ANALYSIS.md  README.md  README_Workflow.md  blending_ensemble.py  boosting_ensemble.py  enhanced_ensemble_runner.py  ensemble_base.py  ensemble_config.py  ensemble_runner.py  optimized_ensemble_runner.py  run_corrected_ensembles.py  run_corrected_stacking.py  run_missing_stacking.py  run_research_combinations.py  run_simple_stacking.py  stacking_ensemble.py  voting_ensemble.py
src/model/individual/: bi_lstm.py  cnn.py  config.py  gru.py  lstm.py  model_utils.py  run_all_models.py
src/model/metrics/: metrics.py
src/models/: convolutional_nn.py  lstm.py  lstm_nn.py  model_utils.py
src/models/metrics/: metrics.py
utils/: calculate_metrics.py
